# ExoSend

./: .gitignore  CMakeLists.txt  CMakePresets.json  ExoSend.rc  LICENSE  README.md  resources.qrc  vcpkg.json
.github/workflows/: ci.yml  release.yml
assets/: .gitkeep
include/exosend/: AppPaths.h  AtomicFile.h  BeaconRateLimiter.h  CertificateManager.h  ConnectionRateLimiter.h  CrashDumpPaths.h  CrashHandler.h  Debug.h  DevResetArgs.h  DiscoveryService.h  ErrorCodes.h  FileTransfer.h  FingerprintUtils.h  HashUtils.h  IncomingTransferPolicy.h  MigrationUtils.h  PairingConfirm.h  PairingPhrase.h  PairingPhraseExtract.h  PairingPromptLimiter.h  PairingSecret.h  PeerInfo.h  ProtectedBlob.h  RelaunchArgs.h  ThreadSafeLog.h  TlsSocket.h  TransferHeader.h  TransferQueueManager.h  TransferServer.h  TransferSession.h  TransportStream.h  TrustStore.h  TrustStoreDpapi.h  UuidGenerator.h  WinSafeFile.h  WindowsAcl.h  WindowsFilename.h  config.h
include/exosend/QtUi/: CloseWarningDialog.h  DragDropListView.h  IncomingTransferDialog.h  MainWindow.h  PeerListItemDelegate.h  PeerListModel.h  PlaceholderListView.h  SecurePairingIncomingDialog.h  SecurePairingOutgoingDialog.h  SettingsDialog.h  SettingsManager.h  TransferListModel.h  TrayIcon.h
installers/: ExoSend.iss
src/cmd/: discovery_test.cpp  echo_client.cpp  echo_server.cpp  file_receive_test.cpp  file_send_test.cpp  firewall_helper.cpp  relaunch_tool.cpp  reset_tool.cpp  server_test.cpp
src/core/: AppPaths.cpp  AtomicFile.cpp  BeaconRateLimiter.cpp  CertificateManager.cpp  ConnectionRateLimiter.cpp  CrashDumpPaths.cpp  DevResetArgs.cpp  DiscoveryService.cpp  FileTransfer.cpp  HashUtils.cpp  IncomingTransferPolicy.cpp  MigrationUtils.cpp  PairingConfirm.cpp  PairingPhrase.cpp  PairingPhraseExtract.cpp  PairingPromptLimiter.cpp  PairingSecret.cpp  ProtectedBlob.cpp  RelaunchArgs.cpp  Rfc1751Words.inc  ThreadSafeLog.cpp  TlsSocket.cpp  TransferQueueManager.cpp  TransferServer.cpp  TransferSession.cpp  TrustStore.cpp  TrustStoreDpapi.cpp  WinSafeFile.cpp  WindowsAcl.cpp  WindowsFilename.cpp
src/gui/: CloseWarningDialog.cpp  CrashHandler.cpp  DragDropListView.cpp  IncomingTransferDialog.cpp  MainWindow.cpp  PeerListItemDelegate.cpp  PeerListModel.cpp  PlaceholderListView.cpp  SecurePairingIncomingDialog.cpp  SecurePairingOutgoingDialog.cpp  SettingsDialog.cpp  SettingsManager.cpp  TransferListModel.cpp  TrayIcon.cpp  main.cpp
tests/: CMakeLists.txt  app_paths_test.cpp  atomic_file_test.cpp  beacon_rate_limiter_test.cpp  beacon_security_test.cpp  benchmark_tool.cpp  certificate_paths_test.cpp  connection_rate_limiter_test.cpp  crash_dump_paths_test.cpp  dev_reset_args_test.cpp  discovery_port_test.cpp  discovery_stop_smoke_test.cpp  fault_injection_test.cpp  file_receiver_filename_test.cpp  fingerprint_utils_test.cpp  hash_test.cpp  incoming_transfer_policy_test.cpp  integration_test.cpp  json_test.cpp  migration_utils_test.cpp  pairing_confirm_test.cpp  pairing_handshake_test.cpp  pairing_limiter_test.cpp  pairing_phrase_extract_test.cpp  pairing_phrase_test.cpp  pairing_secret_test.cpp  protected_blob_test.cpp  protocol_test.cpp  queue_manager_test.cpp  relaunch_args_test.cpp  settings_factory_reset_test.cpp  tls_callback_test.cpp  tls_exporter_test.cpp  transfer_server_dos_test.cpp  transfer_server_port_test.cpp  trust_store_dpapi_test.cpp  trust_store_test.cpp  win_safe_file_test.cpp  windows_acl_test.cpp  windows_filename_test.cpp
vcpkg-overlays/ports/icu/: portfile.cmake
vcpkg-overlays/ports/pcre2/: portfile.cmake
